--- a/themes/default/public/css/default.css
+++ b/themes/default/public/css/default.css
@@ -3,7 +3,7 @@
 $font    : 'Source Sans Pro';
 
 html,body { margin: 0; padding: 0; }
-body { background-color: #F0F0F0; }
+body { background-color: #ecdea8; }
 
 .CMS_hidden { display: none; }
 .wp { padding-left: 20px; padding-right: 20px; }
